# LitePad

./: .gitignore  CLOUD_SYNC_GUIDE.md  EDITOR_MIGRATION.md  README.md  README_EN.md  electron-builder.json  index.html  package-lock.json  package.json  tsconfig.json  v3.0.0-plans.md  vite.config.ts
dist-electron/: main.js  preload.js
docs/: README.md  architecture.md  changelog.md  current-phase.md  current.md  features.md  overview.md  roadmap.md
docs/phases/: 01-planning.md  02-foundation.md  03-core-features.md  04-polish.md
docs/随记/: todo1.md
electron/: main.ts  preload.ts
scripts/: build-portable.cjs  post-build.js  sync-version.cjs
server/: .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
server/src/: index.ts
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ArchiveDropdown.css  ArchiveDropdown.tsx  AuthModal.css  AuthModal.tsx  ConfirmDialog.css  ConfirmDialog.tsx  ConflictResolver.css  ConflictResolver.tsx  ContextMenu.css  ContextMenu.tsx  Editor.tsx  HelpPanel.css  HelpPanel.tsx  Settings.css  Settings.tsx  Sidebar.css  Sidebar.tsx  StatsOverlay.css  StatsOverlay.tsx  StatusBar.css  StatusBar.tsx  TabBar.css  TabBar.tsx  TabSearchModal.css  TabSearchModal.tsx  TitleBar.css  TitleBar.tsx  TrashDropdown.css  TrashDropdown.tsx
src/db/: index.ts
src/hooks/: useTheme.ts  useVirtualList.ts
src/sync/: api.ts  (+5 more)
(+18 files in other folders)
