[package]
name = "litepad"
version = "2.1.2"
description = "Fast, local, high-performance scratch pad"
authors = ["LitePad"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
font-kit = "0.14"
dirs = "6"
tauri-plugin-dialog = "2"
zip = "2"
walkdir = "2"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
hex = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
